fix issue with popup positioning off-screen; add scroll to top functionality

--- a/src/components/MovieSearchResults.css
+++ b/src/components/MovieSearchResults.css
@@ -10,7 +10,7 @@
   width: 80%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start !important;
+  justify-content: space-around;
   align-items: flex-start;
 }
 
